@@ -4,6 +4,7 @@
 	* files/utils.cc: made U7remove() case-insensitive
 	* various: cleaning up output
 	* CombatOptions_gump.cc: made buttons wide enough for text
+	* various: added config/debug/trace/combat option to enable combat msgs
 
 2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* gamewin.cc: fix check for original gamedat
